fix: <ExpandCollapse> flickering (#1505)

--- a/src/components/ExpandCollapse/ExpandCollapse.module.scss
+++ b/src/components/ExpandCollapse/ExpandCollapse.module.scss
@@ -66,17 +66,18 @@
   transition: transform var(--motion-expressive-short) var(--motion-timing-transition);
 }
 
+// TODO add some other animation here or remove completely - causing flickering cause of intersection with the header
 .animateExpandCollapseContent {
-  animation: expandContentAnimation var(--motion-productive-medium) var(--motion-timing-enter);
+  //animation: expandContentAnimation var(--motion-productive-medium) var(--motion-timing-enter);
 }
 
-@keyframes expandContentAnimation {
-  0% {
-    opacity: 0;
-    transform: translateY(var(--dropdown-menu-fadinY, -75px));
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
+//@keyframes expandContentAnimation {
+//  0% {
+//    opacity: 0;
+//    transform: translateY(var(--dropdown-menu-fadinY, -75px));
+//  }
+//  100% {
+//    opacity: 1;
+//    transform: translateY(0px);
+//  }
+//}
